--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "type": "git",
     "url": "https://github.com/joaodubas/growth.git"
   },
+  "dependencies": {
+    "readable-stream": "1.0.x"
+  },
   "devDependencies": {
     "mocha": "1.9.x",
     "expect.js": "0.2.x"
